search modal background; /admissions inner pages button jumping; fix hidden carousel control arrows

--- a/development/terminalfour/src/sass/ContentTypes/_content.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_content.scss
@@ -30,7 +30,7 @@ img.border {
 }
  a:hover {
   // color: #003663;
-  border-bottom: 1px solid;
+  border-bottom: 0px solid;
   text-decoration: none;
 }
 .description {
