--- a/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
@@ -32,9 +32,9 @@
 .homepage-feature-caption-link:hover, .homepage-feature-caption-link:focus, .homepage-feature-caption-link:active {
     color: #fff;
 }
-.carousel-control {
-    display: none;
-}
+// .carousel-control {
+//     display: none;
+// }
 .t4-slide .carousel-control {
     display: block;
     position: absolute;
