--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -7647,22 +7647,22 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
   margin-top: 0.1em;
 }
 
-.modal-content {
+#searchModal .modal-content {
   background-color: transparent;
   -webkit-box-shadow: none;
   box-shadow: none;
   border: none;
 }
 
-.modal-body {
+#searchModal .modal-body {
   padding: 0;
 }
 
-.modal-dialog {
+#searchModal .modal-dialog {
   margin: 0px auto;
 }
 
-.close, .close:hover {
+#searchModal .close, #searchModal .close:hover {
   color: #fff;
   opacity: 1;
   font-size: 15px;
@@ -7672,18 +7672,18 @@ div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar
   letter-spacing: 2px;
 }
 
-.modal-header {
+#searchModal .modal-header {
   padding: 0;
   border-bottom: none;
 }
 
-.modal-footer {
+#searchModal .modal-footer {
   padding: 0;
   text-align: right;
   border-top: none;
 }
 
-.modal-header .close {
+#searchModal .modal-header .close {
   margin-top: 4em;
 }
 
@@ -8609,10 +8609,6 @@ a.skip-content:active, a.skip-content:focus, a.skip-content:hover {
 
 .homepage-feature-caption-link:hover, .homepage-feature-caption-link:focus, .homepage-feature-caption-link:active {
   color: #fff;
-}
-
-.carousel-control {
-  display: none;
 }
 
 .t4-slide .carousel-control {
@@ -10154,7 +10150,7 @@ a:focus, a:hover {
   font-weight: 700;
 }
 .content a:hover {
-  border-bottom: 1px solid;
+  border-bottom: 0px solid;
   text-decoration: none;
 }
 .content .description {
